<resources>
    <string name="app_name">Test</string>

    <string name="text_home">Home</string>
    <string name="text_frequently_used">Frequently Used</string>
    <string name="text_mobile_recharge">Mobile Recharge</string>
    <string name="text_bill_payment">Bill\nPayments</string>
    <string name="text_bank_transfer">Bank Transfer</string>
    <string name="text_request_money">Request Money</string>
    <string name="text_transfer_money">Transfer Money</string>
    <string name="text_service">Service</string>
    <string name="text_open_account">Open Account</string>
    <string name="text_manage_cards">Manage Cards</string>
    <string name="text_all_cards">All Cards</string>
    <string name="text_add_new_card">Add New Card</string>
    <string name="text_add_card">Add Card</string>
    <string name="text_card_details">Card Details</string>
    <string name="text_current_balance">Current Balance</string>
    <string name="text_transaction_history">Transactions History</string>
    <string name="text_day">Day</string>
    <string name="text_month">Month</string>
    <string name="text_yearly">Yearly</string>
    <string name="text_card_holder_name">Cardholder Name</string>
    <string name="hint_card_holder_name">John Doe</string>
    <string name="text_card_number">Card Number</string>
    <string name="hint_card_number">XXXX XXXX XXXX XXXX</string>
    <string name="text_card_type">Card Type</string>
    <string name="text_card_expiry">Expiry</string>
    <string name="hint_card_expiry">MM/YY</string>
    <string name="text_card_cvv">CVV</string>
    <string name="hint_card_cvv">XXX</string>
    <string name="text_error_card_holder_name_empty">Name cannot be empty</string>
    <string name="text_error_card_holder_name_min_length">Name must have at least 3 chars</string>
    <string name="text_error_card_number_empty">Card Number cannot be empty</string>
    <string name="text_error_card_number_length">Card Number must have 16 digits</string>
    <string name="text_error_card_type_empty">Please select Card type</string>
    <string name="text_error_card_expiry_empty">Expiry details cannot be empty</string>
    <string name="text_error_card_expiry_invalid_month">Invalid Month</string>
    <string name="text_error_card_expired">Card expired</string>
    <string name="text_error_card_expiry_invalid">Invalid expiry date</string>
    <string name="text_error_card_cvv_empty">CVV cannot be empty</string>
    <string name="text_error_card_cvv_length">CVV must have 3 digits</string>
    <string name="text_error_invalid">Invalid</string>
    <string name="text_error_something_went_wrong">Something went wrong.\nPlease try again later.</string>
    <string name="text_try_now">Try now</string>
</resources>