<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <!--        <variable-->
        <!--            name="viewModel"-->
        <!--            type="com.interview.test.viewmodel.CardsViewModel" />-->
        <variable
            name="uiState"
            type="com.interview.test.viewmodel.UiState" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.cards.AddCardFragment">


        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_card_holder_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_card_holder_name"
            style="@style/TextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rect_edittext"
            android:hint="@string/hint_card_holder_name"
            android:padding="15dp"
            android:text="@={uiState.cardHolderName}"
            android:textColor="@color/light_grey"
            android:textColorHint="@color/color_border_edittext" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_card_number" />

        <com.interview.test.CardNumberEditText
            android:id="@+id/ed_card_number"
            style="@style/TextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rect_edittext"
            android:hint="@string/hint_card_number"
            android:inputType="number"
            android:padding="15dp"
            android:text="@={uiState.cardNumber}"
            android:textColor="@color/light_grey"
            android:textColorHint="@color/color_border_edittext" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_card_type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ed_card_type"
            style="@style/TextMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rect_edittext"
            android:drawableEnd="@drawable/ic_vd_down_arrow"
            android:padding="15dp"
            android:text="@={uiState.cardType}"
            android:textColor="@color/color_border_edittext"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_card_expiry" />

                <com.interview.test.ExpiryDateEditText
                    android:id="@+id/ed_card_expiry"
                    style="@style/TextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_rect_edittext"
                    android:hint="@string/hint_card_expiry"
                    android:inputType="number|phone"
                    android:padding="15dp"
                    android:text="@={uiState.expiryDate}"
                    android:textColor="@color/light_grey"
                    android:textColorHint="@color/color_border_edittext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_card_cvv" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ed_card_cvv"
                    style="@style/TextMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_rect_edittext"
                    android:hint="@string/hint_card_cvv"
                    android:inputType="number"
                    android:padding="15dp"
                    android:text="@={uiState.cvv}"
                    android:textColor="@color/light_grey"
                    android:textColorHint="@color/color_border_edittext" />
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_rect_blue"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/text_add_card"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>
</layout>