<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.interview.test.viewmodel.CardSummaryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.dashboard.CardSummaryFragment">


        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:visible_unless="@{viewModel.summaryUiState.success}"
            tools:visibility="gone">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:outlineAmbientShadowColor="@android:color/transparent"
                android:outlineSpotShadowColor="@android:color/transparent"
                app:cardBackgroundColor="@color/blue_trans"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_current_balance"
                        android:textColor="@color/blue_trans_1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/blue"
                        android:textSize="30sp"
                        app:balance="@{viewModel.balance}"
                        tools:text="$3,567.12" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginVertical="10dp"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="5dp"
                        app:rippleColor="@android:color/transparent"
                        app:strokeColor="@android:color/transparent"
                        app:strokeWidth="0dp">

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tabLayout"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:backgroundTint="@android:color/white"
                            app:tabBackground="@drawable/tabs_selector"
                            app:tabGravity="fill"
                            app:tabIndicatorColor="@android:color/transparent"
                            app:tabIndicatorHeight="0dp"
                            app:tabMode="fixed"
                            app:tabRippleColor="@android:color/transparent"
                            app:tabSelectedTextColor="@android:color/white"
                            app:tabTextAppearance="@style/CustomTabTextAppearance"
                            app:tabTextColor="@color/text_default">

                            <com.google.android.material.tabs.TabItem
                                android:id="@+id/tab_item_day"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="30dp"
                                android:text="@string/text_day" />

                            <com.google.android.material.tabs.TabItem
                                android:id="@+id/tab_item_month"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="30dp"
                                android:text="@string/text_month" />

                            <com.google.android.material.tabs.TabItem
                                android:id="@+id/tab_item_year"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="30dp"
                                android:text="@string/text_yearly" />

                        </com.google.android.material.tabs.TabLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart_transactions"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="@color/white" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/text_transaction_history" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_transactions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:paddingBottom="100dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_transaction" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="80dp"
            android:visibility="gone"
            app:visible_unless="@{viewModel.summaryUiState.loading}"
            tools:visibility="gone">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            android:visibility="gone"
            app:visible_unless="@{viewModel.summaryUiState.error}"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_error"
                style="@style/TextRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/text_error_something_went_wrong"
                android:textSize="16sp"
                app:visible_unless="@{viewModel.summaryUiState.error}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_try_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_rect_blue"
                android:gravity="center"
                android:paddingHorizontal="35dp"
                android:text="@string/text_try_now" />
        </LinearLayout>
    </LinearLayout>
</layout>